# AReS-Anesthesia-Response-Simulator

./: .gitignore  LICENSE  README.md  comparison_concentration.ipynb  comparison_infusion.ipynb
matlab/: Disturbance.m  Factory.m  Patient.m  PharmacodynamicDoH.m  PharmacodynamicHemodynamics.m  PharmacodynamicNMB.m  PharmacokineticModel.m  README.md  Simulator.m  SimulatorConcentration.m  TCI.m  main.m
matlab/enums/: BloodSampling.m  DisturbanceType.m  DoHMeasure.m  Drug.m  Interaction.m  Model.m  Outputs.m  PatientPhase.m  SimulatorMode.m  TciMode.m  VolumeStatus.m
matlab/parameters/: pd_data_eleveld.mat  pd_data_schnider.mat
python/: README.md  environment.yml  pyproject.toml  setup.py
python/AReS/: TCI.py  __init__.py  disturbance.py  patient.py  pharmacodynamics.py  pharmacokinetics.py  simulator.py
python/AReS/parameters/: pd_data_eleveld.csv  pd_data_schnider.csv
python/AReS/utils/: __init__.py  enums.py  pid.py  plot_simulation.py  read_file.py
python/notebooks/: ARes_sample.ipynb  disturbance.ipynb  exp_volume_status.ipynb  experiment2.ipynb  predefined_scenarios.ipynb  sensitivity_analysis.ipynb  sensitivity_analysis_extended_results.ipynb
