[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AReS"
version = "0.1"
authors = [
    {name = "Manuela Merlo", email = "merlomanu1999@gmail.com"},
    {name = "Sara Hosseinirad", email = "sarahrad@ece.ubc.ca"},
]
description = "Open-source AReS for modeling patient responses under anesthesia."
readme = "README.md"
license = {text = "MIT"}  # Or {file = "LICENSE"} if you have a separate license file
Repository = "https://github.com/ManuMerlo/AReS-Patient-Simulator"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "pandas==1.3.3",
    "numpy==1.21.2",
    "control==0.9.4",
    "scipy==1.7.3",
]
dynamic = ["version", "dependencies"] # If you want to manage version and dependencies dynamically

[project.scripts]
ares-simulator = "AReS.main:main"